prev/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-110
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: nginx
        release: "1.10"
    spec:
      containers: 
        - name: nginx
          image: nginx:1.10
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: nginx1.10
  labels: 
    release: "1.10"
    name: nginx
    serviceName: nginx1.10
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector: 
    name : nginx
    release: "1.10"
